[tool.poetry]
name = "master"
version = "0.1.0"
description = ""
authors = ["Jens <jensakrr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.2.2"
torch-geometric = "^2.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
