[tool.poetry]
name = "master"
version = "0.1.0"
description = ""
authors = ["Jens <jensakrr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.2.2"
torch-geometric = "^2.5.2"
transformers = "^4.39.3"
pandas = "^2.2.1"
sentence-transformers = "^2.6.1"
tqdm = "^4.66.2"
matplotlib = "^3.8.4"
scikit-learn = "^1.4.2"
nbstripout = "^0.7.1"
peft = "^0.10.0"
click = "^8.1.7"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
